--- a/css/style.css
+++ b/css/style.css
@@ -37,8 +37,12 @@ body{
     position: relative;
     width: 100%;
     list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
-.navigation ul li:hover{
+.navigation ul li:hover,
+.navigation ul li.hovered
+{
     background-color: var(--white)
 }
 .navigation ul li:nth-child(1){
@@ -54,6 +58,58 @@ body{
     text-decoration: none;
     color: var(--white);
 }
-.navigation ul li:hover a{
+.navigation ul li:hover a,
+.navigation ul li.hovered a
+{
     color:var(--blue);
+}
+.navigation ul li a .icon{
+position: relative;
+display: block;
+min-width: 60px;
+height: 60px;
+line-height: 70px;
+text-align: center;
+}
+.navigation ul li a .icon ion-icon{
+    font-size: 1.75em;
+}
+.navigation ul li a .title{
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    white-space: nowrap;
+}
+/* cureved outside */
+
+.navigation ul li:hover a::before,
+.navigation ul li.hovered a::before
+{
+    content: "";
+    position: absolute;
+    right: 0;
+    top: -50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 35px 35px 0 10px var(--white);
+    background: transparent;
+
+}
+.navigation ul li:hover a::after,
+.navigation ul li.hovered a::after
+{
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: -50px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 35px -35px 0 10px var(--white);
+    background: transparent;
+
 }
